fix(cli): update pom.xml